			SWI-Prolog ChangeLog
			====================

					--------------------------------------
					NOTE: Bug #<N> refers to bugs reported
					to the SWI-Prolog Bugzilla system at
					http://gollem.science.uva.nl/bugzilla/
					--------------------------------------

  * ADDED: SIO_FLUSH to control-functions to allow flushing compressed
    streams.

  * FIXED: Deal with new definition of variable EMACS after a mail from
    the Emacs developers.  Now EMACS inferior mode is implied if $EMACS
    is defined and non-empty.

==================================
VERSION 5.6.24 (November 28, 2006)
==================================

  * FIXED: dde_request to progman returning nul-characters at the end.
    Windows XP/SP2 returns wrong length for the CF_TEXT result.

  * PORT: Bug#237: Use clock_gettime() for get_time/1 if provided.
    Keri Harris.

  * FIXED: Bug#236: setenv/2 error reporting.  Keri Harris.

  * ADDED: Flag shared_object_search_path holding variable name for the
    searching .so/.dll files.

  * FIXED: Possible crash in current_prolog_flag(-, +).

  * MODIFIED: raised priority of | to 1105 to facilitate CHR.  Unlikely
    to cause problems.  If it does adjust code or use :- op(1100, xfy, (|)).
    Jon Sneyers.

  * FIXED: Instantiation error on :- [X].  Bart Demoen.

  * FIXED: Possible crash in file-name canonisation.  Roberto Bagnara.
    SECURITY: This is used by absolute_file_name/[2,3], which is adviced
    for path-name validation in web-servers.  Makes DoS attacks possible.
    Unclear whether or not the bug is exploitable aotherwise.

  * FIXED: Bug#233 Compilation error in single-threaded mode.  Keri Harris.

==================================
VERSION 5.6.23 (November 10, 2006)
==================================

  * PORT: Allow building 32-bit version on 64-bits Linux.

  * PORT: By default build shared object on x86_64-linux platforms.  Needed
    for embedding in Java and unlike IA32, creating a shared object does not
    affect performance.